--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 <dependencies>
   <dependency>
     <groupId>edu.washington.cs.knowitall</groupId>
-    <artifactId>parser</artifactId>
+    <artifactId>nlptools</artifactId>
     <version>1.0.0-SNAPSHOT</version>
   </dependency>
   <dependency>
