Changed format for BuildTreePatterns to match the output of LemmaGrep.

--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,7 @@
         <configuration>
           <args>
             <arg>-deprecation</arg>
+            <arg>-unchecked</arg>
           </args>
           <jvmArgs>
             <jvmArg>-Xms128m</jvmArg>
