Added sourceDirectory definition in pom.

--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,8 @@
     </dependency>
   </dependencies>
   <build>
+    <sourceDirectory>src/main/scala</sourceDirectory>
+    <testSourceDirectory>src/test/scala</testSourceDirectory>
     <plugins>
       <plugin>
         <groupId>org.scala-tools</groupId>
