--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -3,4 +3,4 @@ log4j.rootLogger=DEBUG, CA
 log4j.appender.CA=org.apache.log4j.ConsoleAppender
 log4j.appender.CA.layout=org.apache.log4j.PatternLayout
 log4j.appender.CA.layout.ConversionPattern=%-4r [%t] %-5p %c %x - %m%n
-log4j.appender.CA.layout=System.err
+log4j.appender.CA.target=System.err
