Added scm section.

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,9 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
+  <scm>
+    <connection>scm:git:///</connection>
+  </scm>
   <repositories>
     <repository>
       <id>knowitall-public</id>
