(release)prepare for next development iteration

--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>pattern</artifactId>
   <name>pattern</name>
-  <version>1.0.1</version>
+  <version>1.0.2-SNAPSHOT</version>
   <parent>
     <groupId>edu.washington.cs.knowitall</groupId>
     <artifactId>knowitall</artifactId>
