--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <artifactId>pattern</artifactId>
-  <name>pattern</name>
+  <artifactId>openparse</artifactId>
+  <name>openparse</name>
   <version>1.0.2-SNAPSHOT</version>
   <parent>
     <groupId>edu.washington.cs.knowitall</groupId>
@@ -36,7 +36,7 @@
     <dependency>
       <groupId>edu.washington.cs.knowitall</groupId>
       <artifactId>nlptools-core</artifactId>
-      <version>2.0.1-SNAPSHOT</version>
+      <version>2.0.1</version>
     </dependency>
     <!-- Logging -->
     <dependency>
