--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,12 @@
     <dependency>
       <groupId>edu.washington.cs.knowitall</groupId>
       <artifactId>nlptools-core</artifactId>
-      <version>2.0.1</version>
+      <version>2.1.1-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>edu.washington.cs.knowitall</groupId>
+      <artifactId>nlptools-stem-morpha</artifactId>
+      <version>2.1.1-SNAPSHOT</version>
     </dependency>
     <!-- Logging -->
     <dependency>
