--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,8 @@
   <version>1.0.4-SNAPSHOT</version>
   <parent>
     <groupId>edu.washington.cs.knowitall</groupId>
-    <artifactId>knowitall</artifactId>
-    <version>2.1.1</version>
+    <artifactId>knowitall-oss</artifactId>
+    <version>1.0.0</version>
   </parent>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -15,26 +15,16 @@
   <scm>
     <connection>scm:git:///</connection>
   </scm>
-  <repositories>
-    <repository>
-      <id>knowitall-public</id>
-      <url>http://knowitall.cs.washington.edu/maven2</url>
-    </repository>
-    <repository>
-      <id>knowitall-snapshot</id>
-      <url>http://knowitall.cs.washington.edu/maven2-snapshot</url>
-    </repository>
-  </repositories>
   <dependencies>
     <dependency>
-      <groupId>edu.washington.cs.knowitall</groupId>
+      <groupId>edu.washington.cs.knowitall.nlptools</groupId>
       <artifactId>nlptools-core</artifactId>
-      <version>2.1.1-SNAPSHOT</version>
+      <version>2.2.0-SNAPSHOT</version>
     </dependency>
     <dependency>
-      <groupId>edu.washington.cs.knowitall</groupId>
+      <groupId>edu.washington.cs.knowitall.nlptools</groupId>
       <artifactId>nlptools-stem-morpha</artifactId>
-      <version>2.1.1-SNAPSHOT</version>
+      <version>2.2.0-SNAPSHOT</version>
     </dependency>
     <!-- Logging -->
     <dependency>
