--- a/core/pom.xml
+++ b/core/pom.xml
@@ -51,9 +51,9 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>org.scala-tools.testing</groupId>
-      <artifactId>specs_2.9.1</artifactId>
-      <version>1.6.9</version>
+      <groupId>org.specs2</groupId>
+      <artifactId>specs2_2.9.2</artifactId>
+      <version>1.11</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
