--- a/core/pom.xml
+++ b/core/pom.xml
@@ -27,6 +27,11 @@
       <artifactId>nlptools-stem-morpha</artifactId>
       <version>2.2.0-SNAPSHOT</version>
     </dependency>
+    <dependency>
+      <groupId>nz.ac.waikato.cms.weka</groupId>
+      <artifactId>weka-stable</artifactId>
+      <version>3.6.7</version>
+    </dependency>
     <!-- Logging -->
     <dependency>
       <groupId>org.slf4j</groupId>
