--- a/app/pom.xml
+++ b/app/pom.xml
@@ -36,13 +36,13 @@
     </dependency>
     <dependency>
       <groupId>edu.washington.cs.knowitall.nlptools</groupId>
-      <artifactId>nlptools-parse-stanford</artifactId>
-      <version>2.2.0-SNAPSHOT</version>
+      <artifactId>nlptools-parse-stanford_2.9.2</artifactId>
+      <version>2.2.0</version>
     </dependency>
     <dependency>
       <groupId>edu.washington.cs.knowitall.nlptools</groupId>
-      <artifactId>nlptools-parse-malt</artifactId>
-      <version>2.2.0-SNAPSHOT</version>
+      <artifactId>nlptools-parse-malt_2.9.2</artifactId>
+      <version>2.2.0</version>
     </dependency>
     <dependency>
       <groupId>uk.co.turingatemyhamster</groupId>
