--- a/core/pom.xml
+++ b/core/pom.xml
@@ -19,13 +19,13 @@
   <dependencies>
     <dependency>
       <groupId>edu.washington.cs.knowitall.nlptools</groupId>
-      <artifactId>nlptools-core</artifactId>
-      <version>2.2.0-SNAPSHOT</version>
+      <artifactId>nlptools-core_2.9.2</artifactId>
+      <version>2.2.0</version>
     </dependency>
     <dependency>
       <groupId>edu.washington.cs.knowitall.nlptools</groupId>
-      <artifactId>nlptools-stem-morpha</artifactId>
-      <version>2.2.0-SNAPSHOT</version>
+      <artifactId>nlptools-stem-morpha_2.9.2</artifactId>
+      <version>2.2.0</version>
     </dependency>
     <dependency>
       <groupId>nz.ac.waikato.cms.weka</groupId>
