--- a/core/pom.xml
+++ b/core/pom.xml
@@ -1,21 +1,44 @@
 <?xml version="1.0"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>edu.washington.cs.knowitall.ollie</groupId>
-  <artifactId>ollie-core</artifactId>
-  <name>ollie-core</name>
-  <version>1.0.0-SNAPSHOT</version>
   <parent>
     <groupId>edu.washington.cs.knowitall</groupId>
     <artifactId>knowitall-oss</artifactId>
     <version>1.0.1</version>
   </parent>
+  <groupId>edu.washington.cs.knowitall.ollie</groupId>
+  <artifactId>ollie-core</artifactId>
+  <version>1.0.0-SNAPSHOT</version>
+  <name>ollie-core</name>
+  <description>Ollie is an open information extractor for binary relations.</description>
+  <scm>
+    <url>https://github.com/knowitall/ollie</url>
+    <connection>scm:git://github.com/knowitall/ollie.git</connection>
+    <developerConnection>scm:git:git@github.com:knowitall/ollie.git</developerConnection>
+  </scm>
+  <licenses>
+    <license>
+      <name>GPL 3</name>
+      <url>http://gplv3.fsf.org/</url>
+      <distribution>repo</distribution>
+    </license>
+  </licenses>
+  <organization>
+    <name>University of Washington CSE</name>
+    <url>http://cs.washington.edu/</url>
+  </organization>
+  <developers>
+    <developer>
+      <name>Michael Schmitz</name>
+    </developer>
+    <developer>
+      <name>Robert Bart</name>
+    </developer>
+  </developers>
+  <inceptionYear>2012</inceptionYear>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
-  <scm>
-    <connection>scm:git:///</connection>
-  </scm>
   <dependencies>
     <dependency>
       <groupId>edu.washington.cs.knowitall.nlptools</groupId>
