--- a/app/pom.xml
+++ b/app/pom.xml
@@ -45,6 +45,11 @@
       <version>2.2.0</version>
     </dependency>
     <dependency>
+      <groupId>edu.washington.cs.knowitall.nlptools</groupId>
+      <artifactId>nlptools-sentence-opennlp_2.9.2</artifactId>
+      <version>2.2.0</version>
+    </dependency>
+    <dependency>
       <groupId>edu.washington.cs.knowitall</groupId>
       <artifactId>opennlp-sent-models</artifactId>
       <version>1.5</version>
