--- a/core/pom.xml
+++ b/core/pom.xml
@@ -18,8 +18,8 @@
   </scm>
   <licenses>
     <license>
-      <name>GPL 3</name>
-      <url>http://gplv3.fsf.org/</url>
+      <name>ReVerb Software License Agreement</name>
+      <url>http://reverb.cs.washington.edu/LICENSE.txt</url>
       <distribution>repo</distribution>
     </license>
   </licenses>
@@ -49,11 +49,6 @@
       <groupId>edu.washington.cs.knowitall.nlptools</groupId>
       <artifactId>nlptools-stem-morpha_2.9.2</artifactId>
       <version>2.2.0</version>
-    </dependency>
-    <dependency>
-      <groupId>nz.ac.waikato.cms.weka</groupId>
-      <artifactId>weka-stable</artifactId>
-      <version>3.6.7</version>
     </dependency>
     <!-- Logging -->
     <dependency>
