--- a/train/pom.xml
+++ b/train/pom.xml
@@ -22,13 +22,7 @@
     <dependency>
       <groupId>org.scalanlp</groupId>
       <artifactId>breeze_2.9.2</artifactId>
-      <version>0.1-SNAPSHOT</version>
-      <exclusions>
-      <exclusion>
-        <groupId>uk.co.forward</groupId>
-        <artifactId>jblas</artifactId>
-      </exclusion>
-      </exclusions>
+      <version>0.1</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
