--- a/app/pom.xml
+++ b/app/pom.xml
@@ -37,12 +37,17 @@
     <dependency>
       <groupId>edu.washington.cs.knowitall.nlptools</groupId>
       <artifactId>nlptools-parse-malt_2.9.2</artifactId>
-      <version>2.2.1-SNAPSHOT</version>
+      <version>2.2.1</version>
+    </dependency>
+    <dependency>
+      <groupId>edu.washington.cs.knowitall.nlptools</groupId>
+      <artifactId>nlptools-parse-stanford_2.9.2</artifactId>
+      <version>2.2.1</version>
     </dependency>
     <dependency>
       <groupId>edu.washington.cs.knowitall.nlptools</groupId>
       <artifactId>nlptools-sentence-opennlp_2.9.2</artifactId>
-      <version>2.2.1-SNAPSHOT</version>
+      <version>2.2.1</version>
     </dependency>
     <dependency>
       <groupId>edu.washington.cs.knowitall</groupId>
@@ -127,5 +132,39 @@
         </executions>
       </plugin>
     </plugins>
+    <pluginManagement>
+    	<plugins>
+    		<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
+    		<plugin>
+    			<groupId>org.eclipse.m2e</groupId>
+    			<artifactId>lifecycle-mapping</artifactId>
+    			<version>1.0.0</version>
+    			<configuration>
+    				<lifecycleMappingMetadata>
+    					<pluginExecutions>
+    						<pluginExecution>
+    							<pluginExecutionFilter>
+    								<groupId>org.scala-tools</groupId>
+    								<artifactId>
+    									maven-scala-plugin
+    								</artifactId>
+    								<versionRange>
+    									[2.15.2,)
+    								</versionRange>
+    								<goals>
+    									<goal>testCompile</goal>
+    									<goal>compile</goal>
+    								</goals>
+    							</pluginExecutionFilter>
+    							<action>
+    								<ignore></ignore>
+    							</action>
+    						</pluginExecution>
+    					</pluginExecutions>
+    				</lifecycleMappingMetadata>
+    			</configuration>
+    		</plugin>
+    	</plugins>
+    </pluginManagement>
   </build>
 </project>
