--- a/core/pom.xml
+++ b/core/pom.xml
@@ -7,8 +7,8 @@
     <version>1.0.1</version>
   </parent>
   <groupId>edu.washington.cs.knowitall.ollie</groupId>
-  <artifactId>ollie-core</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <artifactId>ollie-core_2.9.2</artifactId>
+  <version>1.0.0.RC1-SNAPSHOT</version>
   <name>ollie-core</name>
   <description>Ollie is an open information extractor for binary relations.</description>
   <scm>
@@ -109,39 +109,5 @@
         </configuration>
       </plugin>
     </plugins>
-    <pluginManagement>
-    	<plugins>
-    		<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
-    		<plugin>
-    			<groupId>org.eclipse.m2e</groupId>
-    			<artifactId>lifecycle-mapping</artifactId>
-    			<version>1.0.0</version>
-    			<configuration>
-    				<lifecycleMappingMetadata>
-    					<pluginExecutions>
-    						<pluginExecution>
-    							<pluginExecutionFilter>
-    								<groupId>org.scala-tools</groupId>
-    								<artifactId>
-    									maven-scala-plugin
-    								</artifactId>
-    								<versionRange>
-    									[2.15.2,)
-    								</versionRange>
-    								<goals>
-    									<goal>testCompile</goal>
-    									<goal>compile</goal>
-    								</goals>
-    							</pluginExecutionFilter>
-    							<action>
-    								<ignore></ignore>
-    							</action>
-    						</pluginExecution>
-    					</pluginExecutions>
-    				</lifecycleMappingMetadata>
-    			</configuration>
-    		</plugin>
-    	</plugins>
-    </pluginManagement>
   </build>
 </project>
