--- a/core/pom.xml
+++ b/core/pom.xml
@@ -44,12 +44,12 @@
     <dependency>
       <groupId>edu.washington.cs.knowitall.nlptools</groupId>
       <artifactId>nlptools-core_2.9.2</artifactId>
-      <version>2.2.1</version>
+      <version>2.2.2-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>edu.washington.cs.knowitall.nlptools</groupId>
       <artifactId>nlptools-stem-morpha_2.9.2</artifactId>
-      <version>2.2.1</version>
+      <version>2.2.2-SNAPSHOT</version>
     </dependency>
     <!-- Logging -->
     <dependency>
