--- a/core/pom.xml
+++ b/core/pom.xml
@@ -44,12 +44,12 @@
     <dependency>
       <groupId>edu.washington.cs.knowitall.nlptools</groupId>
       <artifactId>nlptools-core_2.9.2</artifactId>
-      <version>2.2.2-SNAPSHOT</version>
+      <version>2.2.3</version>
     </dependency>
     <dependency>
       <groupId>edu.washington.cs.knowitall.nlptools</groupId>
       <artifactId>nlptools-stem-morpha_2.9.2</artifactId>
-      <version>2.2.2-SNAPSHOT</version>
+      <version>2.2.3</version>
     </dependency>
     <!-- Logging -->
     <dependency>
@@ -92,13 +92,6 @@
         <artifactId>scala-maven-plugin</artifactId>
         <version>3.0.1</version>
         <executions>
-          <execution>
-            <goals>
-              <goal>compile</goal>
-              <goal>testCompile</goal>
-              <goal>doc-jar</goal>
-            </goals>
-          </execution>
         </executions>
         <configuration>
           <args>
