--- a/core/pom.xml
+++ b/core/pom.xml
@@ -44,19 +44,19 @@
     <dependency>
       <groupId>edu.washington.cs.knowitall.nlptools</groupId>
       <artifactId>nlptools-core_2.9.2</artifactId>
-      <version>2.2.3</version>
+      <version>2.2.4-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>edu.washington.cs.knowitall.nlptools</groupId>
       <artifactId>nlptools-stem-morpha_2.9.2</artifactId>
-      <version>2.2.3</version>
+      <version>2.2.4-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>edu.washington.cs.knowitall.nlptools</groupId>
+      <artifactId>nlptools-conf-breeze_2.9.2</artifactId>
+      <version>2.2.4-SNAPSHOT</version>
     </dependency>
     <!-- Confidence Function -->
-    <dependency>
-      <groupId>org.scalanlp</groupId>
-      <artifactId>breeze_2.9.2</artifactId>
-      <version>0.1</version>
-    </dependency>
     <!-- Logging -->
     <dependency>
       <groupId>org.slf4j</groupId>
