--- a/core/pom.xml
+++ b/core/pom.xml
@@ -44,17 +44,17 @@
     <dependency>
       <groupId>edu.washington.cs.knowitall.nlptools</groupId>
       <artifactId>nlptools-core_2.9.2</artifactId>
-      <version>2.2.4-SNAPSHOT</version>
+      <version>2.2.4</version>
     </dependency>
     <dependency>
       <groupId>edu.washington.cs.knowitall.nlptools</groupId>
       <artifactId>nlptools-stem-morpha_2.9.2</artifactId>
-      <version>2.2.4-SNAPSHOT</version>
+      <version>2.2.4</version>
     </dependency>
     <dependency>
       <groupId>edu.washington.cs.knowitall.nlptools</groupId>
       <artifactId>nlptools-conf-breeze_2.9.2</artifactId>
-      <version>2.2.4-SNAPSHOT</version>
+      <version>2.2.4</version>
     </dependency>
     <!-- Confidence Function -->
     <!-- Logging -->
