--- a/core/pom.xml
+++ b/core/pom.xml
@@ -39,24 +39,24 @@
   <inceptionYear>2012</inceptionYear>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <nlptools.version>2.2.6-SNAPSHOT</nlptools.version>
   </properties>
   <dependencies>
     <dependency>
       <groupId>edu.washington.cs.knowitall.nlptools</groupId>
       <artifactId>nlptools-core_2.9.2</artifactId>
-      <version>2.2.4</version>
+      <version>${nlptools.version}</version>
     </dependency>
     <dependency>
       <groupId>edu.washington.cs.knowitall.nlptools</groupId>
       <artifactId>nlptools-stem-morpha_2.9.2</artifactId>
-      <version>2.2.4</version>
+      <version>${nlptools.version}</version>
     </dependency>
     <dependency>
       <groupId>edu.washington.cs.knowitall.nlptools</groupId>
       <artifactId>nlptools-conf-breeze_2.9.2</artifactId>
-      <version>2.2.4</version>
+      <version>${nlptools.version}</version>
     </dependency>
-    <!-- Confidence Function -->
     <!-- Logging -->
     <dependency>
       <groupId>org.slf4j</groupId>
