--- a/core/pom.xml
+++ b/core/pom.xml
@@ -39,7 +39,7 @@
   <inceptionYear>2012</inceptionYear>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <nlptools.version>2.4.1-SNAPSHOT</nlptools.version>
+    <nlptools.version>2.4.1</nlptools.version>
   </properties>
   <dependencies>
     <dependency>
